part1/11/manifests/deployment-pingpong.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      volumes:
        - name: shared-pingpong
          persistentVolumeClaim:
            claimName: pingpong-claim
      containers:
        - name: pingpong
          image: thepapermen/devopswithkubernetes:ping_pong-0.4.1-alpine
          volumeMounts:
            - name: shared-pingpong
              mountPath: /usr/src/app/files
