part1/11/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      containers:
        - name: showoutput
          image: thepapermen/devopswithkubernetes:showoutput-0.4.0-alpine
        - name: pingpong
          image: thepapermen/devopswithkubernetes:ping_pong-0.4.0-alpine
